--- a/src/layout/projects/Projects.css
+++ b/src/layout/projects/Projects.css
@@ -7,7 +7,7 @@
   position: relative;
   opacity: 0;
   transform: translate(0, 2.5rem);
-  transition: all 1s ease-in-out;
+  transition: all 0.7s ease-in-out;
   transition-delay: 0.1s;
 }
 
